api/infra/k8s/psql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
        - name: psql
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
