api/infra/k8s/seedling-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seedling-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seedling
  template:
    metadata:
      labels:
        app: seedling
    spec:
      containers:
        - name: seedling
          image: ryanachten/seedling
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
