api/infra/k8s/psql-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-clusterip-srv
spec:
  selector:
    app: psql
  ports:
    - name: psql
      protocol: TCP
      port: 5432
      targetPort: 5432
