api/infra/k8s/seedling-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: seedling-srv
spec:
  type: NodePort
  selector:
    app: seedling
  ports:
    - name: seedling
      protocol: TCP
      port: 80
      targetPort: 80
